--- a/css/style.css
+++ b/css/style.css
@@ -1,168 +1,160 @@
-/* CSS */
-
-/* selector universal */
-
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* estilos mobile */
-
-/* estilos de header */
-
-header {
-   font-family: "Roboto", sans-serif;
-   background-color: whitesmoke;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   padding: 10px;
-}
-
-header img {
-    width: 60px;
-}
-
-.nav-bar {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    background-color: whitesmoke;
-    width: 100%;
-    display:flex;
-    justify-content: end;
-    align-items: flex-end;
-}
-
-header nav ul {
-    list-style-type: none;
-    display: flex;
-    gap: 10px;
-    margin-left: 20px;
-    text-align: center;
-}
-
-header nav ul li a {
-    color:black;
-    list-style: none;
-    text-decoration: none;
-}
-
-/* estilos de main */
-
-main {
-     margin: 10px;
-     min-height: 80vh;
-     align-content:start;
-     row-gap: 10px;
-    }
-
-main h1 {
-    color: black;
-    font-family:"Roboto", sans-serif;
-    background-color: antiquewhite;
-    margin: 0;
-    padding: 10px;
-    font-size: 2rem;
-}
-
-h1 {
-    display: block;
-    grid-column: 1 / -1;
-}
-
-.first-description {
-    color:lightslategray;
-}
-
-/* secciones y sub-secciones */
-
-section {
-    margin-top: 20px
-}
-
-section h2, section h3 {
-    margin-bottom: 10px;
-    margin-right: 10px;
-    text-align: center;
-}
-
-section p {
-    margin-bottom: 20px;
-}
-
-.help-center-section {
-    display: grid;
-    grid-template-columns: repeat (3, 2fr);
-    grid-gap: 10px;
-}
-
-.help-center-sub-section {
-    display: flex;
-}
-
-.index-section {
-    display: flex;
-    border: 1px solid whitesmoke;
-}
-
-
-body {
-    font-family:"Roboto", sans-serif;
-    color: black;
-}
-
-/* estilos para productos */
-
+/* comentario en scss y css */
 .photo-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  margin: 10px;
 }
 
 .photo-container img {
-    width: 100%;
-    height: auto;
-    border: 1px solid black;
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  border: 1px solid black;
+  object-fit: cover;
 }
 
 .photo {
+  display: flex;
+}
+
+.pre-bt-title {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.cards-section {
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  gap: 20px;
+  text-align: center;
+}
+
+.card-bs {
+  width: 100%;
+  height: auto;
+}
+
+.card-img-top {
+  width: 100%;
+  height: auto;
+  border: 1px solid black;
+}
+
+.btn {
+  margin-bottom: 10px;
+}
+
+/* mq desktop */
+@media screen and (min-width: 1024px) {
+  main {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  .photo-container {
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+  .location {
+    text-align: center;
+    margin-top: 20px;
+  }
+  .cards-section {
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+  .card-bs {
+    width: 12rem;
+    height: auto;
+  }
+}
+/* estilos de header */
+header {
+  font-family: "Roboto", sans-serif;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+header img {
+  width: 60px;
+  height: auto;
+}
+header .nav-bar {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: whitesmoke;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: flex-end;
+}
+header nav ul {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  margin-left: 20px;
+  text-align: center;
+}
+header nav ul li a {
+  color: black;
+  list-style: none;
+  text-decoration: none;
+}
+
+/* estilos de main */
+main {
+  margin: 20px;
+  min-height: 80vh;
+  align-content: start;
+  row-gap: 10px;
+}
+main h1 {
+  color: black;
+  font-family: "Roboto", sans-serif;
+  background-color: antiquewhite;
+  margin: 0;
+  padding: 10px;
+  font-size: 2rem;
+}
+main section h2, main section h3 {
+  margin-bottom: 10px;
+  margin-right: 10px;
+  text-align: center;
+}
+main section p {
+  margin-bottom: 20px;
+  text-align: justify;
+}
+main section .help-center-section {
+  display: grid;
+  grid-template-columns: repeat 3, 2fr;
+  grid-gap: 10px;
+}
+main section .help-center-sub-section {
+  display: flex;
+}
+main .location iframe {
+  width: 100%;
+  height: auto;
+  max-width: 600px;
 }
 
 footer {
-    font-size: smaller;
-    font-style: italic;
-    text-align: center;
-    clear: both;
-    padding: 10px;
+  font-size: smaller;
+  font-style: italic;
+  text-align: center;
+  clear: both;
+  padding: 10px;
 }
 
-/* estilos de iframe */
-
-iframe { 
-    width: 100%;
-    max-width: 600px;
-    height: auto;
-}
-
-/* estilos de BT - toast */
-
-
-
-/* mq desktop */
-
-@media screen and (min-width: 1024px) {
-
-    .photo-container {
-        grid-template-columns: repeat(3, 1fr); /* 3 columnas iguales */
-    }
-
-    .location {
-        text-align: center;
-        margin-top: 20px;
-    }
-}
+/*# sourceMappingURL=style.css.map */
