--- a/sass/utilidades/_products.scss
+++ b/sass/utilidades/_products.scss
@@ -1,5 +1,7 @@
 // estilos de productos
 
+@import "./mixin";
+
 .photo-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -8,8 +10,7 @@
 }
 
 .photo-container img {
-    width: 100%;
-    height: auto;
+    @include medidas-base (100%, auto);
     border: 1px solid black;
     object-fit: cover;
 }
