--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@
   width: 100%;
   height: auto;
   border: 1px solid black;
+  padding: 400px;
 }
 
 .btn {
@@ -93,6 +94,7 @@ header .nav-bar {
   z-index: 10;
   background-color: whitesmoke;
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -123,7 +125,6 @@ main h1 {
   font-family: "Roboto", sans-serif;
   background-color: antiquewhite;
   margin: 0;
-  padding: 10px;
   font-size: 2rem;
 }
 main section h2, main section h3 {
