Cambios de imagenes, tablet, hover mouse

--- a/sass/utilidades/_bs.scss
+++ b/sass/utilidades/_bs.scss
@@ -1,6 +1,7 @@
 
 @import "./mixin";
-
+@import "./variables";
+ 
 // estilos para bs
 
 .pre-bt-title {
@@ -12,19 +13,28 @@
 .cards-section {
     display: grid;
     grid-template-columns: repeat(3, 2fr);
-    gap: 20px;
+    gap: 5px;
     text-align: center;
 }
 
 .card-bs {
     @include medidas-base (100%, auto);
+
 }
 
 .card-img-top {
     @include medidas-base (100%, auto);
-    border: 1px solid black;
+    border: 1px solid;
 }
 
-.btn {
+.btn-primary {
     margin-bottom: 10px;
+    background-color: $color-nav-titles;
+    color: $color-secundario-background;
+    border-color: $color-principal-background;
+}
+
+.btn-primary:hover {
+    background-color: $color-secundario-background;
+    border-color: black;
 }
