--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -1,3 +1,4 @@
 
-$color-principal-background: whitesmoke;
-$color-secundario-background: antiquewhite;
+$color-nav-titles: whitesmoke;
+$color-secundario-background: #5E1914;
+$color-principal-background: #C8C7C1;
