--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 .cards-section {
   display: grid;
   grid-template-columns: repeat(3, 2fr);
-  gap: 20px;
+  gap: 5px;
   text-align: center;
 }
 
@@ -38,15 +38,50 @@
 .card-img-top {
   width: 100%;
   height: auto;
-  border: 1px solid black;
+  border: 1px solid;
 }
 
-.btn {
+.btn-primary {
   margin-bottom: 10px;
+  background-color: whitesmoke;
+  color: #5E1914;
+  border-color: #C8C7C1;
+}
+
+.btn-primary:hover {
+  background-color: #5E1914;
+  border-color: black;
 }
 
 /* mq desktop */
 @media screen and (min-width: 1024px) {
+  main {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  .photo-container {
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+  .location {
+    text-align: center;
+    margin-top: 20px;
+  }
+  .cards-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+  .card-bs {
+    width: 12rem;
+    height: auto;
+  }
+}
+@media screen and (min-width: 768px) {
   main {
     padding-left: 100px;
     padding-right: 100px;
@@ -79,7 +114,7 @@ header {
   background-color: whitesmoke;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 10px;
 }
@@ -114,34 +149,30 @@ header nav ul li a {
 
 /* estilos de main */
 main {
-  margin: 20px;
+  margin: 10px;
   min-height: 80vh;
   align-content: start;
   row-gap: 10px;
+  background-color: #C8C7C1;
 }
 main h1 {
-  color: black;
+  color: whitesmoke;
   font-family: "Roboto", sans-serif;
-  background-color: antiquewhite;
-  margin: 0;
+  background-color: #5E1914;
+  padding: 40px;
+  margin: 10px;
+  text-align: center;
   font-size: 2rem;
 }
-main section h2, main section h3 {
-  margin-bottom: 10px;
+main .text-subtitle {
   margin-right: 10px;
-  text-align: center;
-}
-main section p {
-  margin-bottom: 20px;
+  margin-left: 10px;
   text-align: justify;
 }
-main section .help-center-section {
-  display: grid;
-  grid-template-columns: repeat 3, 2fr;
-  grid-gap: 10px;
-}
-main section .help-center-sub-section {
-  display: flex;
+main h2, main h3 {
+  margin-right: 10px;
+  margin-left: 10px;
+  text-align: justify;
 }
 main .location iframe {
   width: 100%;
