--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,12 +16,13 @@
 
 header{
     font-family: "Roboto", sans-serif;
-    background-color: $color-principal-background;
+    background-color: $color-nav-titles;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
     padding: 10px;
+
     img {
         @include medidas-base (60px, auto);
             }
@@ -29,7 +30,7 @@ header{
         position: sticky;
         top: 0;
         z-index: 10;
-        background-color: $color-principal-background;
+        background-color: $color-nav-titles;
         @include medidas-base (100%, auto);
         display: flex;
         flex-direction: column;
@@ -57,39 +58,32 @@ header{
 /* estilos de main */
 
 main {
-    margin: 20px;
+    margin: 10px;
     min-height: 80vh;
     align-content:start;
     row-gap: 10px;
-    h1{
-        color: black;
+    background-color: $color-principal-background;
+    h1 {
+        color: $color-nav-titles;
         font-family: "Roboto", sans-serif;
         background-color: $color-secundario-background;
-        margin: 0;
-        font-size: 2rem;
+        padding: 40px;
+        margin: 10px;
+        text-align:center;
+        font-size: 2rem;    
     }
 
-    // estilos de sections y sub-sections
+    .text-subtitle { 
+        margin-right: 10px;
+        margin-left: 10px;
+        text-align: justify;
+    }
 
-    section {
-        h2, h3 {
-            margin-bottom: 10px;
-            margin-right: 10px;
-            text-align: center;
-        }
-        p {
-            margin-bottom: 20px;
-            text-align:justify;
-        }
-        .help-center-section{
-            display: grid;
-            grid-template-columns: repeat (3, 2fr);
-            grid-gap: 10px;
-        }
-        .help-center-sub-section{
-            display: flex;
-        }
-        }
+    h2, h3 {
+        margin-right: 10px;
+        margin-left: 10px;
+        text-align: justify;
+    }
 
     .location iframe {
         @include medidas-base (100%, auto);
